--- a/scss/_dark-mode.scss
+++ b/scss/_dark-mode.scss
@@ -13,4 +13,11 @@
     .card {
         background-color: $card-background-dark;
     }
+
+    .switch {
+        background: $switch-bg-dark;
+        &::after {
+            background: $switch-dark;
+        }
+    }
 }
